# arduino-bare-metal

./: .gitignore  CMakeLists.txt  README.md  atmega328p.ld  disasembly.txt
cmake/: avr-gcc.cmake
package/: CMakeLists.txt
package/HAL/: CMakeLists.txt
package/HAL/ADC/: CMakeLists.txt
package/HAL/GPIO/: CMakeLists.txt
package/HAL/GPIO/inc/: gpio.h
package/HAL/GPIO/src/: gpio.c
package/HAL/USART/: CMakeLists.txt
package/HAL/gpio/: CMakeLists.txt
package/HAL/interrupts/: CMakeLists.txt
package/HAL/interrupts/inc/: interrupt.h
package/HAL/interrupts/src/: Interrupt_functions.c  atmega328p_interrupts.c  interrupt.c  interrupt_base.c
package/HAL/timers/: CMakeLists.txt
package/HAL/util/: CMakeLists.txt
package/HAL/util/inc/: registers.h
package/main/: CMakeLists.txt
package/main/src/: atmega328p_startup.S  main.c  startup_atmega328p.S  startup_atmega328p.s
tests/: CMakeLists.txt  TESTS.md
tests/gpio/: CMakeLists.txt
tests/gpio/inc/: gpio_test.h  gpio_tests.h  gpio_time_test.h  gpio_value_tests.h
tests/gpio/src/: gpio_test.c  gpio_time_test.c  gpio_value_tests.c
tests/interrupts/: CMakeLists.txt
tests/interrupts/src/: INT_test.c
